add: vehicle template for constraint and reupdate vehicle crud methods